--- a/src/index.css
+++ b/src/index.css
@@ -13,22 +13,24 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
-  background-color: rgb(92, 51, 22);
+  border: 5px solid rgb(158, 20, 92);
+  background-color: rgb(255, 94, 161);
   border-radius: 3px;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 .square {
   width: 100px;
   height: 100px;
-  border: 3px solid rgb(37, 16, 1);
   box-sizing: border-box;
+  border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   border-radius: 3px;
-  box-shadow: 3px 3px 0px 0px wheat inset;
+  border:2px solid wheat;
 }
 
 .message {
